--- a/index.ejs
+++ b/index.ejs
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>webpack App</title>
-        <link rel="stylesheet" href="<%= htmlwebpackPlugin.files.css[0] %>" >
+        <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>" >
     </head>
     <body>
         <div id="app"></div>
-        <script type="text/javascript" src="<%= htmlwebpackPlugin.files.js[0] %>"></script>
+        <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
     </body>
 </html>
